# richman

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  cmake_install.cmake  main.cpp  map.h  q  reformat_output.py  result.xlsx  richman  rocord.txt  script.sh  test.py  testcase.txt
src/: CMakeLists.txt  bank.h  cmake_install.cmake  common.h  display.cpp  display.h  gsystem.cpp  gsystem.h  gutil.cpp  gutil.h  map.cpp  place.cpp  place.h  player.cpp  player.h  prop.h  tips.cpp  tips.h
src/test_g2/: config.json
src/test_g2/Mine/: Mine1.in  Mine1.out  Mine2.in  Mine2.out  Mine3.in  Mine3.out  Mine4.in  Mine4.out  Mine5.in  Mine5.out  Mine6.in  Mine6.out  Mine7.in  Mine7.out
src/test_g2/Sell/: Sell01.in  Sell01.out  Sell02.in  Sell02.out  Sell03.in  Sell03.out  Sell04.in  Sell04.out  Sell05.in  Sell05.out  Sell06.in  Sell06.out  Sell07.in  Sell07.out  Sell08.in  Sell08.out  Sell09.in  Sell09.out  Sell10.in  Sell11.in  Sell11.out  Sell12.in  Sell12.out  Sell13.in  Sell14.in  Sell15.in  Sell16.in  Sell17.in  Sell18.in  Sell19.in  Sell19.out  Sell20.in  Sell20.out
src/test_g2/empty/: empty_1.in  empty_1.out  empty_2.in  empty_2.out  empty_3.in  empty_3.out  empty_4.in  empty_4.out  empty_5.in  empty_5.out  empty_6.in  empty_6.out
src/test_g2/fine_/: enough1.in  enough1.out  enough10.in  enough10.out  enough11.in  enough11.out  enough12.in  enough12.out  enough2.in  enough2.out  enough3.in  enough3.out  enough4.in  enough4.out  enough5.in  enough5.out  enough6.in  enough6.out  enough7.in  enough7.out  enough8.in  enough8.out  enough9.in  enough9.out  no_enough1.in  no_enough1.out  no_enough10.in  no_enough10.out  no_enough11.in  no_enough11.out  no_enough12.in  no_enough12.out  no_enough2.in  no_enough2.out  no_enough3.in  no_enough3.out  no_enough4.in  (+59 more)
(+114 files in other folders)
